fix for course catalogue on mobile where course tiles werent clickable

--- a/lms/static/sass/live-blocks/discovery/_facets-01.scss
+++ b/lms/static/sass/live-blocks/discovery/_facets-01.scss
@@ -1,6 +1,7 @@
 .a--discovery-facets {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
+  position: initial;
 
   &__heading {
     @include primary-font-bold;
